feat: add SEO information

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>Overshits</title>
+  <meta name="description" content="Google search cleaner for shitty stackoverflow clones">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="Overshits">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://overshits.yar.services/">
+  <meta property="og:image" content="https://overshits.yar.services/icon.png">
 
   <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-icon-60x60.png">
