feat: add site contents

--- a/index.html
+++ b/index.html
@@ -33,11 +33,47 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
+  <div id="container" class="container my-5 col-lg-6 offset-lg-3">
+    <div class="row">
+      <div class="col-2">
+        <img src="logo.png" class="img-fluid">
+      </div>
+      <div class="col-10">
+        <div class="row">
+          <div class="col">
+            <h1 class="float-left">StackOvershits</h1>
+          </div>
+        </div>
+        <p>
+          <a href="https://github.com/yarfuo/overshits">Open source</a> plugin for deletion of shitty
+          StackOverflow clones from Google search results. Has a self updating blacklist.
+          <strong>Install & Forget.</strong>
+        </p>
+        <div class="row">
+          <div class="col-4">
+            <a href="#">
+              <img src="/img/chrome-store.png" class="bg-light img-fluid" alt="chrome store" />
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="https://addons.mozilla.org/en-US/firefox/addon/stackovershits/">
+              <img src="/img/mozilla-addons.png" class="bg-light img-fluid" alt="chrome store" />
+            </a>
+          </div>
+          <div class="col-4">
+            <a href="https://github.com/yarfuo/overshits">
+              <img src="/img/github-button.png" class="bg-light img-fluid" alt="chrome store" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
