--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div id="container" class="container my-5 col-lg-6 offset-lg-3">
     <div class="row">
       <div class="col-2">
-        <img src="logo.png" class="img-fluid">
+        <img src="logo.png" class="img-fluid" alt="">
       </div>
       <div class="col-10">
         <div class="row">
@@ -56,7 +56,7 @@
         </p>
         <div class="row">
           <div class="col-4">
-            <a href="#">
+            <a href="https://chrome.google.com/webstore/detail/stackovershits/idcideoaglaophnpmbdckpfjplaamaip?hl=ru&authuser=0">
               <img src="/img/chrome-store.png" class="bg-light img-fluid" alt="chrome store" />
             </a>
           </div>
